# reporoot

./: Gemfile  LICENSE  README.md  _config.yml  pyproject.toml
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/workflows/: ci.yml  pages.yml  publish.yml
docs/: integrations.md  reporoot.md
scripts/: check.sh
src/reporoot/: __main__.py  activate.py  add.py  check.py  cli.py  config.py  fetch.py  git.py  init.py  lock.py  remove.py  setup.py  workspace.py
src/reporoot/integrations/: __init__.py  base.py  cargo_workspace.py  claude_md.py  gita.py  go_work.py  npm_workspaces.py  pnpm_workspaces.py  project_script.py  registry.py  run.py  uv_workspace.py  vscode_workspace.py
tests/: conftest.py  test_activate.py  test_add.py  test_check.py  test_config.py  test_e2e.py  test_e2e_ecosystem.py  test_git.py  test_int_claude_md.py  test_int_gita.py  test_int_go_work.py  test_int_npm_workspaces.py  test_int_uv_workspace.py  test_int_vscode_workspace.py  test_lock.py  test_remove.py  test_workspace.py
