[project]
name = "reporoot"
version = "0.1.0"
description = "Reporoot workspace manager"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]
authors = [{name = "cwalv", email = "c@cwa.lv"}]
readme = "README.md"
license = "MIT"
keywords = ["monorepo", "workspace", "multi-repo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://cwalv.github.io/reporoot/"
Repository = "https://github.com/cwalv/reporoot"
Issues = "https://github.com/cwalv/reporoot/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyright>=1.1",
    "types-pyyaml>=6.0",
]

[project.scripts]
reporoot = "reporoot.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
